--- a/exercicios/ex008.html
+++ b/exercicios/ex008.html
@@ -78,11 +78,19 @@
 
     <p><audio src="../musicas/maluma-el-perdedor.mp3" controls loop></audio></p>
 
-    
-  
+    <p><audio src="../musicas/I Believe I Can Fly.mp3" controls autoplay loop></audio></p>
 
+    <p><audio src="../musicas/Oxlade, Camila Cabello - KU LO SA (Official Video) (192 kbps).mp3" autoplay controls loop></audio></p>
 
+    <p><audio src="../musicas/NELLY DILEMMA FEAT KELLY ROWLAND.mp3" autoplay loop controls></audio></p>
 
+    <p><audio src="../musicas/Crushed - Rosette.mp3" controls autoplay loop></audio></p>
+
+    <p><audio src="../musicas/Ben's Brother - Let Me Out.mp3" autoplay controls loop></audio></p>
+
+    <p><audio src="../musicas/Elliott yamin -Wait for You.mp3" autoplay controls loop></audio></p>
+
+    <p><audio src="../musicas/DilemmaThe Way Of  (Mashup) - Ariana Grande feat. Mac Miller vs. Nelly feat. Kelly Rowland.mp3" autoplay loop controls></audio></p>
 
 </body>
 </html>
