--- a/exercicios/ex26/mq004/index.html
+++ b/exercicios/ex26/mq004/index.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Medía Query</title>
+    <link rel="stylesheet" href="estilos/style.css" media="all">
+    <link rel="stylesheet" href="estilos/media-query.css">
 </head>
 <body>
     <main>
         <h1>Testando Media queries</h1>
 
-        <img src="" alt="">
+        <img id="phone" src="imagens/icon-phone.png" alt="Acesso ao Smartphone">
+        <img id="tablet"  src="imagens/icon-tablet.png" alt="Acesso ao tablet">
+        <img id="impresso"  src="imagens/icon-print.png alt=" alt="Acesso Impresso">
+        <img id="pc"  src="imagens/icon-pc.png" alt="Acesso a PC">
+        <img  id="tv" src="imagens/icon-tv.png" alt="Acesso a TV">
     </main>
     
 </body>
