--- a/exercicios/ex26/mq005/index.html
+++ b/exercicios/ex26/mq005/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media</title>
     <link rel="stylesheet" href="estilo/style.css">
+    <link rel="stylesheet" href="media-queries.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
-<body>
     <header>
         <h1>Meu site</h1>
         <i id="burguer" class="material-symbols-outlined" onclick="clickMenu()">Menu</i>
@@ -34,6 +34,14 @@
         </article>
     </main>
     <script>
+        function mudouTamanho() {
+            if (window.innerWidth >= 768) {
+                itens.style,display = 'block'
+            } else {
+                itens.style.display = 'none'
+            }
+        }
+
         function clickMenu() {
             if (itens.style.display == 'block') {
                itens.style.display = 'none'
